--- a/main.css
+++ b/main.css
@@ -23,11 +23,43 @@
     font-size: 15px;
 }
 .keyboard {
-    position: absolute;
-    bottom: 0px;
     width: 1000px;
     height: 400px;
 }
+.footer {
+    position: absolute;
+    bottom: 10px;
+}
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    background-color: #333333;
+    margin: 10% auto;
+    padding: 20px;
+    border: 1px solid #888888;
+    width: 80%;
+}
+/*.close {*/
+    /*color: #aaa;*/
+    /*float: right;*/
+    /*font-size: 28px;*/
+    /*font-weight: bold;*/
+/*}*/
+/*.close:hover, .close:focus {*/
+    /*color: black;*/
+    /*text-decoration: none;*/
+    /*cursor: pointer;*/
+/*}*/
 body {
     background-color: #333333;
     font-size: 30px;
